--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
+		"@radix-ui/react-slot": "^1.1.0",
 		"axios": "^1.7.7",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.53.1",
 		"react-router-dom": "^6.28.0",
-		"tailwind-merge": "^2.5.4"
+		"tailwind-merge": "^2.5.4",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
