--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@tanstack/react-query": "^5.59.20",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.1",
+		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.28.0",
 		"tailwind-merge": "^2.5.4",
 		"zod": "^3.23.8"
